# ProyectoTeoria_RG

./: CMakeLists.txt
datos/: movies.csv
output/: movies.csv
src/: main.cpp
src/lib/binarySearch/: CMakeLists.txt  binarySearch.cpp  binarySearch.h
src/lib/linearSearch/: CMakeLists.txt  linearSearch.cpp  linearSearch.h
src/lib/quicksort/: CMakeLists.txt  quicksort.cpp  quicksort.h
